--- a/content/run.html
+++ b/content/run.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>run</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>run</h1>
 <p><button id="test">test</button>
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -259,7 +259,7 @@ test = beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_sr
 document["test"].bind("click", test.prog)
 </script>
 </p>
-<br />About << <a href='About.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
+<br />About << <a href='About.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
       <div class="container">
