--- a/config/content.htm
+++ b/config/content.htm
@@ -121,7 +121,7 @@ document["test"].bind("click", test.prog)
 </script>
 </p>
 <h2>w13</h2>
-<!-- 導入 brython 程式庫 -->
+<p><button id="Tetris">Tetris-1</button> <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <!-- 啟動 Brython -->
@@ -130,7 +130,9 @@ window.onload=function(){
 brython({debug:1, pythonpath:['/static/','./../downloads/py/']});
 }
 </script>
+</p>
 <div id="brython_div"></div>
+<p>
 <script type="text/python">
 # from https://levelup.gitconnected.com/writing-tetris-in-python-2a16bddb5318
 # 暫時關閉 system proxy 設定後,  pip install pygame
@@ -358,7 +360,16 @@ def do_game():
 doc.addEventListener("keydown", key_down)
 doc.addEventListener("keyup", key_up)
 browser.timer.set_interval(do_game, fps)
-</script><h1>midterm</h1>
+</script>
+<script type="text/python3">
+import beditor
+from browser import document
+url = "https://gist.githubusercontent.com/shih1717/c7229346d517b478d1cbff756036e332/raw/4d82dd7111071e4a972800aa682a10cf4b4fc1d1/Tetris"
+src = open(url).read()
+Tetris = beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
+document["Tetris"].bind("click", Tetris.prog)
+</script>
+</p><h1>midterm</h1>
 <script>
 var winkVideoData = {
   dataVersion: 1,
