--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -110,18 +110,15 @@ print("Python keywords: ", keyword.kwlist)
 # id 為 "keyword" 的按鈕點按時, 執行 kw1 物件中的 prog 方法
 </script>
 </p>
-<p>
 <script type="text/python3">
 import beditor
 from browser import document
-url = "https://gist.githubusercontent.com/shih1717/5d9364fbc8cb19bb21b738a079099276/raw/14790642a1ab135444a2e6a0bb4d60eb8880f7c2/w13-3"
+url = "https://gist.githubusercontent.com/shih1717/c7229346d517b478d1cbff756036e332/raw/4d82dd7111071e4a972800aa682a10cf4b4fc1d1/Tetris"
 src = open(url).read()
-test = beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
-document["test"].bind("click", test.prog)
-</script>
-</p>
-<h2>w13</h2>
-<!-- 導入 brython 程式庫 -->
+Tetris = beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
+document["Tetris"].bind("click", Tetris.prog)
+</script><h2>HW</h2>
+<p><button id="Tetris">Tetris-1</button> <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <!-- 啟動 Brython -->
@@ -130,7 +127,9 @@ window.onload=function(){
 brython({debug:1, pythonpath:['/static/','./../downloads/py/']});
 }
 </script>
+</p>
 <div id="brython_div"></div>
+<p>
 <script type="text/python">
 # from https://levelup.gitconnected.com/writing-tetris-in-python-2a16bddb5318
 # 暫時關閉 system proxy 設定後,  pip install pygame
@@ -358,7 +357,8 @@ def do_game():
 doc.addEventListener("keydown", key_down)
 doc.addEventListener("keyup", key_up)
 browser.timer.set_interval(do_game, fps)
-</script><h1>midterm</h1>
+</script>
+</p><h1>midterm</h1>
 <script>
 var winkVideoData = {
   dataVersion: 1,
