--- a/content/run.html
+++ b/content/run.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a></li></ul><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>run</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W13.html'>Next</a> >> W13<br /><h1>run</h1>
 <p><button id="test">test</button>
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -249,17 +249,14 @@ print("Python keywords: ", keyword.kwlist)
 # id 為 "keyword" 的按鈕點按時, 執行 kw1 物件中的 prog 方法
 </script>
 </p>
-<p>
 <script type="text/python3">
 import beditor
 from browser import document
-url = "https://gist.githubusercontent.com/shih1717/5d9364fbc8cb19bb21b738a079099276/raw/14790642a1ab135444a2e6a0bb4d60eb8880f7c2/w13-3"
+url = "https://gist.githubusercontent.com/shih1717/c7229346d517b478d1cbff756036e332/raw/4d82dd7111071e4a972800aa682a10cf4b4fc1d1/Tetris"
 src = open(url).read()
-test = beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
-document["test"].bind("click", test.prog)
-</script>
-</p>
-<br />About << <a href='About.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+Tetris = beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
+document["Tetris"].bind("click", Tetris.prog)
+</script><br />About << <a href='About.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</div>
         
     <!-- footer -->
       <div class="container">
