--- a/content/w13.html
+++ b/content/w13.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a></li></ul><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">run << <a href='run.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>w13</h1>
+    <div id="tipue_search_content">run << <a href='run.html'>Previous</a> <a href='W14.html'>Next</a> >> W14<br /><h1>W13</h1>
 <p><button id="Tetris">Tetris-1</button> <!-- 導入 brython 程式庫 -->
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -380,15 +380,8 @@ doc.addEventListener("keydown", key_down)
 doc.addEventListener("keyup", key_up)
 browser.timer.set_interval(do_game, fps)
 </script>
-<script type="text/python3">
-import beditor
-from browser import document
-url = "https://gist.githubusercontent.com/shih1717/c7229346d517b478d1cbff756036e332/raw/4d82dd7111071e4a972800aa682a10cf4b4fc1d1/Tetris"
-src = open(url).read()
-Tetris = beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
-document["Tetris"].bind("click", Tetris.prog)
-</script>
-</p><br />run << <a href='run.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
+</p>
+<br />run << <a href='run.html'>Previous</a> <a href='W14.html'>Next</a> >> W14</div>
         
     <!-- footer -->
       <div class="container">
