--- a/content/w13.html
+++ b/content/w13.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a></li></ul><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='W14.html'>W14</a></li></ul><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,8 +139,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">run << <a href='run.html'>Previous</a> <a href='W14.html'>Next</a> >> W14<br /><h1>W13</h1>
-<p><button id="Tetris">Tetris-1</button> <!-- 導入 brython 程式庫 -->
+    <div id="tipue_search_content">run << <a href='run.html'>Previous</a> <a href='W14.html'>Next</a> >> W14<br /><h1>w13</h1>
+<!-- 導入 brython 程式庫 -->
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
 <!-- 啟動 Brython -->
@@ -149,9 +149,7 @@ window.onload=function(){
 brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
 }
 </script>
-</p>
 <div id="brython_div"></div>
-<p>
 <script type="text/python">
 # from https://levelup.gitconnected.com/writing-tetris-in-python-2a16bddb5318
 # 暫時關閉 system proxy 設定後,  pip install pygame
@@ -379,9 +377,7 @@ def do_game():
 doc.addEventListener("keydown", key_down)
 doc.addEventListener("keyup", key_up)
 browser.timer.set_interval(do_game, fps)
-</script>
-</p>
-<br />run << <a href='run.html'>Previous</a> <a href='W14.html'>Next</a> >> W14</div>
+</script><br />run << <a href='run.html'>Previous</a> <a href='W14.html'>Next</a> >> W14</div>
         
     <!-- footer -->
       <div class="container">
