--- a/config/content.htm
+++ b/config/content.htm
@@ -117,8 +117,8 @@ url = "https://gist.githubusercontent.com/shih1717/c7229346d517b478d1cbff756036e
 src = open(url).read()
 Tetris = beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
 document["Tetris"].bind("click", Tetris.prog)
-</script><h2>W13</h2>
-<p><button id="Tetris">Tetris-1</button> <!-- 導入 brython 程式庫 -->
+</script><h2>w13</h2>
+<!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <!-- 啟動 Brython -->
@@ -127,9 +127,7 @@ window.onload=function(){
 brython({debug:1, pythonpath:['/static/','./../downloads/py/']});
 }
 </script>
-</p>
 <div id="brython_div"></div>
-<p>
 <script type="text/python">
 # from https://levelup.gitconnected.com/writing-tetris-in-python-2a16bddb5318
 # 暫時關閉 system proxy 設定後,  pip install pygame
@@ -357,9 +355,7 @@ def do_game():
 doc.addEventListener("keydown", key_down)
 doc.addEventListener("keyup", key_up)
 browser.timer.set_interval(do_game, fps)
-</script>
-</p>
-<h2>W14</h2>
+</script><h2>W14</h2>
 <p><button id="w14">w14</button>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
