--- a/content/W14.html
+++ b/content/W14.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a></li></ul><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='W14.html'>W14</a></li></ul><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W13 << <a href='W13.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>W14</h1>
+    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>W14</h1>
 <p><button id="w14">w14</button>
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -256,7 +256,7 @@ url = "https://gist.githubusercontent.com/shih1717/118fd00372046f814a7e825f7faa8
 src = open(url).read()
 w14= beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
 document["w14"].bind("click", w14.prog)
-</script><br />W13 << <a href='W13.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
+</script><br />w13 << <a href='w13.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
         
     <!-- footer -->
       <div class="container">
