--- a/content/run.html
+++ b/content/run.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a></li></ul><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='W14.html'>W14</a></li></ul><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W13.html'>Next</a> >> W13<br /><h1>run</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>run</h1>
 <p><button id="test">test</button>
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -256,7 +256,7 @@ url = "https://gist.githubusercontent.com/shih1717/c7229346d517b478d1cbff756036e
 src = open(url).read()
 Tetris = beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
 document["Tetris"].bind("click", Tetris.prog)
-</script><br />About << <a href='About.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</div>
+</script><br />About << <a href='About.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
       <div class="container">
