--add progress rate

--- a/config/content.htm
+++ b/config/content.htm
@@ -117,7 +117,7 @@ url = "https://gist.githubusercontent.com/shih1717/c7229346d517b478d1cbff756036e
 src = open(url).read()
 Tetris = beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
 document["Tetris"].bind("click", Tetris.prog)
-</script><h2>w13</h2>
+</script><h1>w13</h1>
 <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
@@ -355,7 +355,7 @@ def do_game():
 doc.addEventListener("keydown", key_down)
 doc.addEventListener("keyup", key_up)
 browser.timer.set_interval(do_game, fps)
-</script><h2>W14</h2>
+</script><h1>W14</h1>
 <p><button id="w14">w14</button>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
@@ -472,7 +472,23 @@ url = "https://gist.githubusercontent.com/shih1717/118fd00372046f814a7e825f7faa8
 src = open(url).read()
 w14= beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
 document["w14"].bind("click", w14.prog)
-</script><h1>midterm</h1>
+</script>
+<h1>progress rate</h1>
+<p>Week1. 1.設定 IPv6 網路 2.在 Github 創建個人的 wcm2022 倉儲</p>
+<p>week2. 1.無</p>
+<p>week3. 1.學習如何建立可攜系統並存於隨身碟</p>
+<p>week4. 1.講解為何無法添加 cmsimde</p>
+<p>week5. 1.無</p>
+<p>week6. 1.無</p>
+<p>week7. 1.學習如何設定 nginx 2.用 Gpg4win 查看下載的檔案之數位簽證 管 理，也可用於檔案加密 week8. 1.無</p>
+<p>week9. 1.期中考，在 wink 影片中增加文字並將其放到個人倉儲</p>
+<p>week10. 1.無</p>
+<p>week11. 1.無</p>
+<p>week12. 1.建立虛擬主機 2.用教室電腦設定伺服器</p>
+<p>week13. 1.用 Bython 環境製作 Tetris 遊戲並提交遊戲專案報告</p>
+<p>week14. 1.將名單上退選的同學資料刪除</p>
+<p>week15. 1.放假 2.將 Tetris 遊戲加入計分系統並提交遊戲計分系統報告</p>
+<p>week16. 1.期末報告總整理</p><h1>midterm</h1>
 <script>
 var winkVideoData = {
   dataVersion: 1,
