--- a/content/W14.html
+++ b/content/W14.html
@@ -2,7 +2,7 @@
         <head>
         <title>wcm2022</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='W14.html'>W14</a></li></ul><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a><li><a href='w13.html'>w13</a><li><a href='W14.html'>W14</a><li><a href='progress rate.html'>progress rate</a><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>W14</h1>
+    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate<br /><h1>W14</h1>
 <p><button id="w14">w14</button>
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -256,7 +256,8 @@ url = "https://gist.githubusercontent.com/shih1717/118fd00372046f814a7e825f7faa8
 src = open(url).read()
 w14= beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
 document["w14"].bind("click", w14.prog)
-</script><br />w13 << <a href='w13.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
+</script>
+<br />w13 << <a href='w13.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate</div>
         
     <!-- footer -->
       <div class="container">
