--- a/content/midterm.html
+++ b/content/midterm.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='W14.html'>W14</a></li></ul><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a><li><a href='w13.html'>w13</a><li><a href='W14.html'>W14</a><li><a href='progress rate.html'>progress rate</a><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W14 << <a href='W14.html'>Previous</a> <br /><h1>midterm</h1>
+    <div id="tipue_search_content">progress rate << <a href='progress rate.html'>Previous</a> <br /><h1>midterm</h1>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -161,7 +161,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><br />W14 << <a href='W14.html'>Previous</a> </div>
+</div><br />progress rate << <a href='progress rate.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
