--- a/content/progress rate.html
+++ b/content/progress rate.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a><li><a href='w13.html'>w13</a><li><a href='W14.html'>W14</a><li><a href='progress rate.html'>progress rate</a><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='w13-add score.html'>w13-add score</a></li></ul><li><a href='W14.html'>W14</a><li><a href='progress rate.html'>progress rate</a><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
