--- a/content/w13.html
+++ b/content/w13.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a><li><a href='w13.html'>w13</a><li><a href='W14.html'>W14</a><li><a href='progress rate.html'>progress rate</a><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='w13-add score.html'>w13-add score</a></li></ul><li><a href='W14.html'>W14</a><li><a href='progress rate.html'>progress rate</a><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">run << <a href='run.html'>Previous</a> <a href='W14.html'>Next</a> >> W14<br /><h1>w13</h1>
+    <div id="tipue_search_content">run << <a href='run.html'>Previous</a> <a href='w13-add score.html'>Next</a> >> w13-add score<br /><h1>w13</h1>
 <!-- 導入 brython 程式庫 -->
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -377,7 +377,8 @@ def do_game():
 doc.addEventListener("keydown", key_down)
 doc.addEventListener("keyup", key_up)
 browser.timer.set_interval(do_game, fps)
-</script><br />run << <a href='run.html'>Previous</a> <a href='W14.html'>Next</a> >> W14</div>
+</script>
+<br />run << <a href='run.html'>Previous</a> <a href='w13-add score.html'>Next</a> >> w13-add score</div>
         
     <!-- footer -->
       <div class="container">
