--change tetris name

--- a/config/content.htm
+++ b/config/content.htm
@@ -356,7 +356,7 @@ doc.addEventListener("keydown", key_down)
 doc.addEventListener("keyup", key_up)
 browser.timer.set_interval(do_game, fps)
 </script>
-<h2>w13-add score</h2>
+<h2>tetris-add score</h2>
 <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
