--- a/content/W14.html
+++ b/content/W14.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='w13-add score.html'>w13-add score</a></li></ul><li><a href='W14.html'>W14</a><li><a href='progress rate.html'>progress rate</a><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='tetris-add score.html'>tetris-add score</a></li></ul><li><a href='W14.html'>W14</a><li><a href='progress rate.html'>progress rate</a><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w13-add score << <a href='w13-add score.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate<br /><h1>W14</h1>
+    <div id="tipue_search_content">tetris-add score << <a href='tetris-add score.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate<br /><h1>W14</h1>
 <p><button id="w14">w14</button>
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -257,7 +257,7 @@ src = open(url).read()
 w14= beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
 document["w14"].bind("click", w14.prog)
 </script>
-<br />w13-add score << <a href='w13-add score.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate</div>
+<br />tetris-add score << <a href='tetris-add score.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate</div>
         
     <!-- footer -->
       <div class="container">
