--- a/content/progress rate.html
+++ b/content/progress rate.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='tetris-add score(考試用).html'>tetris-add score(考試用)</a><li><a href='tetris-add score.html'>tetris-add score</a><li><a href='tetris-add score normal.html'>tetris-add score normal</a></li></ul><li><a href='W14.html'>W14</a><li><a href='progress rate.html'>progress rate</a><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='tetris-add score(考試用).html'>tetris-add score(考試用)</a><li><a href='tetris-add score.html'>tetris-add score</a><li><a href='tetris-add score normal.html'>tetris-add score normal</a></li></ul><li><a href='W14.html'>W14</a><li><a href='W17.html'>W17</a><li><a href='progress rate.html'>progress rate</a><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W14 << <a href='W14.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>progress rate</h1>
+    <div id="tipue_search_content">W17 << <a href='W17.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>progress rate</h1>
 <p>Week1. 1.設定 IPv6 網路 2.在 Github 創建個人的 wcm2022 倉儲</p>
 <p>week2. 1.無</p>
 <p>week3. 1.學習如何建立可攜系統並存於隨身碟</p>
@@ -154,7 +154,7 @@ img.add_border {
 <p>week13. 1.用 Bython 環境製作 Tetris 遊戲並提交遊戲專案報告</p>
 <p>week14. 1.將名單上退選的同學資料刪除</p>
 <p>week15. 1.放假 2.將 Tetris 遊戲加入計分系統並提交遊戲計分系統報告</p>
-<p>week16. 1.期末報告總整理</p><br />W14 << <a href='W14.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
+<p>week16. 1.期末報告總整理</p><br />W17 << <a href='W17.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
         
     <!-- footer -->
       <div class="container">
