--- a/config/content.htm
+++ b/config/content.htm
@@ -1232,7 +1232,7 @@ w14= beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src"
 document["w14"].bind("click", w14.prog)
 </script>
 <h1>W17</h1>
-<p>Terist連結:https://youtu.be/SHZ5eMPbHhs</p><h1>progress rate</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/SHZ5eMPbHhs" title="YouTube video player" width="560"></iframe></p><h1>progress rate</h1>
 <p>Week1. 1.設定 IPv6 網路 2.在 Github 創建個人的 wcm2022 倉儲</p>
 <p>week2. 1.無</p>
 <p>week3. 1.學習如何建立可攜系統並存於隨身碟</p>
