--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1231,7 +1231,8 @@ src = open(url).read()
 w14= beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src")
 document["w14"].bind("click", w14.prog)
 </script>
-<h1>progress rate</h1>
+<h1>W17</h1>
+<p>Terist連結:https://youtu.be/SHZ5eMPbHhs</p><h1>progress rate</h1>
 <p>Week1. 1.設定 IPv6 網路 2.在 Github 創建個人的 wcm2022 倉儲</p>
 <p>week2. 1.無</p>
 <p>week3. 1.學習如何建立可攜系統並存於隨身碟</p>
