--- a/config/content.htm
+++ b/config/content.htm
@@ -1232,7 +1232,10 @@ w14= beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src"
 document["w14"].bind("click", w14.prog)
 </script>
 <h1>W17</h1>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/SHZ5eMPbHhs" title="YouTube video player" width="560"></iframe></p><h1>progress rate</h1>
+<p>剛開始練了一兩次熟悉一下速度後面就可以了，也有做過50fps的但是跟25fps的成績反而是差不多的</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/SHZ5eMPbHhs" title="YouTube video player" width="560"></iframe></p>
+<p>評分依據:有些課程沒有弄到完全懂，但是作業都有交，也有些是與同學討論做出來的，倉儲也有更新。</p>
+<p>課程心得:這學期有座wink投影片、nginx、虛擬主機和有些上學期的可攜，最讓我有興趣的是虛擬主機，也花最多時間去玩虛擬主機。</p><h1>progress rate</h1>
 <p>Week1. 1.設定 IPv6 網路 2.在 Github 創建個人的 wcm2022 倉儲</p>
 <p>week2. 1.無</p>
 <p>week3. 1.學習如何建立可攜系統並存於隨身碟</p>
