--- a/content/W17.html
+++ b/content/W17.html
@@ -140,7 +140,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W14 << <a href='W14.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate<br /><h1>W17</h1>
-<p>Terist連結:https://youtu.be/SHZ5eMPbHhs</p><br />W14 << <a href='W14.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate</div>
+<p>剛開始練了一兩次熟悉一下速度後面就可以了，也有做過50fps的但是跟25fps的成績反而是差不多的</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/SHZ5eMPbHhs" title="YouTube video player" width="560"></iframe></p>
+<p>評分依據:有些課程沒有弄到完全懂，但是作業都有交，也有些是與同學討論做出來的，倉儲也有更新。</p>
+<p>課程心得:這學期有座wink投影片、nginx、虛擬主機和有些上學期的可攜，最讓我有興趣的是虛擬主機，也花最多時間去玩虛擬主機。</p><br />W14 << <a href='W14.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate</div>
         
     <!-- footer -->
       <div class="container">
