--- a/config/content.htm
+++ b/config/content.htm
@@ -1232,6 +1232,7 @@ w14= beditor.editor(src, "kw_editor", "kw_console", "kw__container", "kw_py_src"
 document["w14"].bind("click", w14.prog)
 </script>
 <h1>W17</h1>
+<p><a href="https://gist.githubusercontent.com/shih1717/187d540095cfbde066c522c36405781e/raw/72f8d46dd484a79810d9d95288db6fc191359abc/%25E8%25A8%25BB%25E8%25A7%25A3">程式註解</a></p>
 <p>剛開始練了一兩次熟悉一下速度後面就可以了，也有做過50fps的但是跟25fps的成績反而是差不多的</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/SHZ5eMPbHhs" title="YouTube video player" width="560"></iframe></p>
 <p>評分依據:有些課程沒有弄到完全懂，但是作業都有交，也有些是與同學討論做出來的，倉儲也有更新。</p>
