--- a/content/W17.html
+++ b/content/W17.html
@@ -140,6 +140,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W14 << <a href='W14.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate<br /><h1>W17</h1>
+<p><a href="https://gist.githubusercontent.com/shih1717/187d540095cfbde066c522c36405781e/raw/72f8d46dd484a79810d9d95288db6fc191359abc/%25E8%25A8%25BB%25E8%25A7%25A3">程式註解</a></p>
 <p>剛開始練了一兩次熟悉一下速度後面就可以了，也有做過50fps的但是跟25fps的成績反而是差不多的</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/SHZ5eMPbHhs" title="YouTube video player" width="560"></iframe></p>
 <p>評分依據:有些課程沒有弄到完全懂，但是作業都有交，也有些是與同學討論做出來的，倉儲也有更新。</p>
