--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1206,7 +1206,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h1>progress rate</h1>
+</div>
+<h1>期末任務2</h1><h1>progress rate</h1>
 <p>Week1. 1.設定 IPv6 網路 2.在 Github 創建個人的 wcm2022 倉儲</p>
 <p>week2. 1.無</p>
 <p>week3. 1.學習如何建立可攜系統並存於隨身碟</p>
